--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -24,6 +24,15 @@
         }
 
     }
+    .work-desc{
+        .desc-index{
+            li{
+                .summary{
+                    font-family: 'Pretendard-Regular';
+                }
+            }
+        }
+    }
 
     .work-title,.desc-index {
         font-family: var(--font-family-Eng);
@@ -208,31 +217,35 @@
             width: 100%;
             margin-top: 5%;
             overflow-x: hidden;
-
-
             .inner-box {
                 position: relative;
-                left: 5%;
                 display: flex;
                 flex-direction: column;
                 gap: 50px;
                 height: 100%;
+                width: 100%;
             }
 
             .work-desc {
                 display: flex;
                 align-items: center;
-                padding: 0 5%;
                 position: relative;
-                left: 0;
+                height: 150px;
+                width: 100%;
                 justify-content: center;
                 z-index: 999;
+                background-color: var(--black);
 
                 .work-title {
                     color: var(--mainColor100-color);
                     font-size: 7.5rem;
                     font-weight: 300;
                     position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%);
+                    text-align: center;
+                    white-space: nowrap;
                 }
 
                 .desc-index {
@@ -242,16 +255,28 @@
                     z-index: 999;
 
 
+
                     li {
                         position: absolute;
-                        top: 0;
-                        left: 0;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%,-50%);
                         width: 100%;
                         height: 100%;
                         display: flex;
                         align-items: center;
                         background-color: var(--black);
                         opacity: 0;
+                        text-align: center;
+                        a{
+                            display: block;
+                            text-align: center;
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%,-50%);
+                            width: 100%;
+                        }
 
 
                         &.on {
@@ -264,14 +289,7 @@
                            transform: translateY(0);
                         }
 
-                        &:nth-child(8) {
-                            p {
-                                line-height: 230px;
-                            }
-                        }
-
                         a {
-
                             display: block;
                             color: #fff;
 
@@ -300,12 +318,13 @@
 
                 >div {
                     gap: 30px;
-                    transform: translateX(12%);
+                    transform: translateX(5%);
 
                     li {
                         border: 1px solid #ffffff;
                         border-radius: 25px;
                         width: 500px;
+
 
                         a {
                             display: block;
@@ -358,8 +377,6 @@
                     .splide__slide {
                         padding: 5px 20px;
                         font-size: 2.8rem;
-
-
                     }
                 }
             }
@@ -368,7 +385,6 @@
 
         .inner {
             width: 100%;
-            height: 450px;
             margin-top: 5%;
             overflow-x: hidden;
 
@@ -389,12 +405,16 @@
                 background-color: var(--black);
                 width: 100%;
                 height: 100%;
+                padding: 0 5%;
 
                 .work-title {
                     color: var(--mainColor100-color);
                     font-size: 7.5rem;
                     font-weight: 300;
                     position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%);
 
                     span {
                         display: block;
@@ -409,8 +429,9 @@
 
                     li {
                         position: absolute;
-                        top: 0;
-                        left: 0;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%,-50%);
                         width: 100%;
                         height: 100%;
                         display: flex;
@@ -424,12 +445,6 @@
                             opacity: 1;
                         }
 
-                        &:nth-child(8) {
-                            p {
-                                line-height: 230px;
-                            }
-                        }
-
                         a {
                             display: block;
                             color: #fff;
@@ -439,6 +454,7 @@
                                 font-size: 6.3rem;
                                 font-weight: 300;
                                 height: 150px;
+
 
                                 &.br {
                                     height: 230px;
