--- a/src/css/pages/work.css
+++ b/src/css/pages/work.css
@@ -18,6 +18,9 @@
   padding: 5px 20px;
   white-space: nowrap;
 }
+#work .work-desc .desc-index li .summary {
+  font-family: "Pretendard-Regular";
+}
 #work .work-title, #work .desc-index {
   font-family: var(--font-family-Eng);
 }
@@ -168,26 +171,32 @@
   }
   #work .inner .inner-box {
     position: relative;
-    left: 5%;
     display: flex;
     flex-direction: column;
     gap: 50px;
     height: 100%;
+    width: 100%;
   }
   #work .inner .work-desc {
     display: flex;
     align-items: center;
-    padding: 0 5%;
     position: relative;
-    left: 0;
+    height: 150px;
+    width: 100%;
     justify-content: center;
     z-index: 999;
+    background-color: var(--black);
   }
   #work .inner .work-desc .work-title {
     color: var(--mainColor100-color);
     font-size: 7.5rem;
     font-weight: 300;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    white-space: nowrap;
   }
   #work .inner .work-desc .desc-index {
     width: 100%;
@@ -197,14 +206,25 @@
   }
   #work .inner .work-desc .desc-index li {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     background-color: var(--black);
     opacity: 0;
+    text-align: center;
+  }
+  #work .inner .work-desc .desc-index li a {
+    display: block;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
   }
   #work .inner .work-desc .desc-index li.on {
     opacity: 1;
@@ -214,9 +234,6 @@
   }
   #work .inner .work-desc .desc-index li.on b {
     transform: translateY(0);
-  }
-  #work .inner .work-desc .desc-index li:nth-child(8) p {
-    line-height: 230px;
   }
   #work .inner .work-desc .desc-index li a {
     display: block;
@@ -241,7 +258,7 @@
   }
   #work .inner .work-list > div {
     gap: 30px;
-    transform: translateX(12%);
+    transform: translateX(5%);
   }
   #work .inner .work-list > div li {
     border: 1px solid #ffffff;
@@ -291,7 +308,6 @@
   }
   #work .inner {
     width: 100%;
-    height: 450px;
     margin-top: 5%;
     overflow-x: hidden;
   }
@@ -310,12 +326,16 @@
     background-color: var(--black);
     width: 100%;
     height: 100%;
+    padding: 0 5%;
   }
   #work .inner .work-desc .work-title {
     color: var(--mainColor100-color);
     font-size: 7.5rem;
     font-weight: 300;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   #work .inner .work-desc .work-title span {
     display: block;
@@ -327,8 +347,9 @@
   }
   #work .inner .work-desc .desc-index li {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     display: flex;
@@ -339,9 +360,6 @@
   }
   #work .inner .work-desc .desc-index li.on {
     opacity: 1;
-  }
-  #work .inner .work-desc .desc-index li:nth-child(8) p {
-    line-height: 230px;
   }
   #work .inner .work-desc .desc-index li a {
     display: block;
