--- a/src/css/pages/scss/about.scss
+++ b/src/css/pages/scss/about.scss
@@ -19,7 +19,7 @@
 }
 
 #about .about-banner {
-        font-family: var(--font-family-Eng);
+    font-family: var(--font-family-Eng);
 }
 
 @media (max-width:700px) {
@@ -141,94 +141,100 @@
             }
         }
 
-        .inner {
-            figure {
-                width: 100%;
-                height: 600px;
-                gap: 10%;
-                margin-top: 50px;
-                align-items: center;
-                justify-content: center;
+        // .inner {
+        //     position: relative;
+        //     height: 200vh;
+        //     .me {
+        //         width: 100%;
+        //         height: 600px;
+        //         display: flex;
+        //         position: sticky;
+        //         margin-top: 50px;
+        //         align-items: center;
+        //         justify-content: center;
 
-                >.pc {
-                    display: block;
-                    height: 90%;
-                    border-radius: 25px;
-                }
+        //         >.pc {
+        //             display: block;
+        //             height: 90%;
+        //             border-radius: 25px;
+        //         }
 
-                >.mobile {
-                    display: none;
-                }
+        //         >.mobile {
+        //             display: none;
+        //         }
 
-                figcaption {
-                    p {
-                        font-size: 1.5rem;
-                        margin: 20px 0;
+        //     }
 
-                        span {
-                            margin-right: 30px;
+        //     .sticky {
+        //         p {
+        //             font-size: 1.5rem;
+        //             margin: 20px 0;
 
-                            // &.kor {
-                            //     font-size: 1rem;
-                            // }
+        //             span {
+        //                 margin-right: 30px;
 
-                            &:nth-child(1) {
-                                font-weight: bold;
-                            }
-                        }
-                    }
+        //                 // &.kor {
+        //                 //     font-size: 1rem;
+        //                 // }
 
-                    .skill {
-                        p {
-                            font-weight: bold;
-                        }
+        //                 &:nth-child(1) {
+        //                     font-weight: bold;
+        //                 }
+        //             }
+        //         }
 
-                        ul {
-                            gap: 20px;
-                            flex-wrap: wrap;
+        //         .skill {
+        //             p {
+        //                 font-weight: bold;
+        //             }
 
-                            li {
-                                width: 50px;
+        //             ul {
+        //                 gap: 20px;
+        //                 flex-wrap: wrap;
 
-                                img {
-                                    width: 100%;
-                                    transition: .35s;
-                                }
+        //                 li {
+        //                     width: 50px;
 
-                                &:hover img {
-                                    transform: rotate(5deg) scale(1.2);
-                                }
-                            }
-                        }
-                    }
-                }
-            }
+        //                     img {
+        //                         width: 100%;
+        //                         transition: .35s;
+        //                     }
 
-            .word {
-                margin-top: 3%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
+        //                     &:hover img {
+        //                         transform: rotate(5deg) scale(1.2);
+        //                     }
+        //                 }
+        //             }
+        //         }
+
+        //         .word {
+        //             margin-top: 3%;
+        //             display: flex;
+        //             flex-direction: column;
+        //             justify-content: center;
+        //             align-items: center;
 
 
-                ul {
+        //             ul {
 
-                    flex-wrap: wrap;
-                    align-items: center;
+        //                 flex-wrap: wrap;
+        //                 align-items: center;
 
-                    li {
-                        font-size: 3.5rem;
-                        margin: 20px 10px;
+        //                 li {
+        //                     font-size: 3.5rem;
+        //                     margin: 20px 10px;
 
-                        &.kor {
-                            font-size: 2.5rem;
-                        }
-                    }
-                }
+        //                     &.kor {
+        //                         font-size: 2.5rem;
+        //                     }
+        //                 }
+        //             }
 
-            }
-        }
+        //         }
+        //     }
+
+
+        // }
     }
 }
 
@@ -248,25 +254,67 @@
         }
 
         .inner {
-            figure {
-                width: 100%;
-                height: 600px;
-                gap: 10%;
-                margin-top: 50px;
-                align-items: center;
-                justify-content: center;
+            position: relative;
+            margin-top: 4%;
+            height: 180vh;
+            justify-content: space-between;
+            padding: 0 30px;
+            gap: 0px;
 
-                >.pc {
-                    display: block;
-                    height: 100%;
-                    border-radius: 25px;
+            .me {
+                width: 40%;
+                height: 100vh;
+                position: sticky;
+                top: 0%;
+
+                // transform: translateY(-50%);
+                >div {
+                    position: absolute;
+                    width: 70%;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
                 }
 
-                >.mobile {
+                .pc {
+                    width: 99%;
+                    margin: 3px;
+                    border-radius: 20px;
+                    border: 3px solid transparent;
+                    background-image: linear-gradient(#000, #000), linear-gradient(300deg, #e657af, #0049ff, #43cf2e);
+                    background-origin: border-box;
+                    background-clip: content-box, border-box;
+                }
+
+                .mobile {
                     display: none;
                 }
 
-                figcaption {
+            }
+
+            .sticky {
+                position: relative;
+                top: 10%;
+                width: 60%;
+                border: 1px solid #000;
+
+                .desc {
+                    h2 {
+                        font-size: 3.5rem;
+                        line-height: 5rem;
+                        font-weight: 600;
+                    }
+
+                    p {
+                        margin-top: 30px;
+                        line-height: 2rem;
+                        font-size: 19px;
+                    }
+                }
+
+                .name {
+                    margin-top: 8%;
+
                     p {
                         // font-size: 1.7rem;
                         margin: 20px 0;
@@ -307,30 +355,28 @@
                         }
                     }
                 }
-            }
 
-            .word {
-                margin: 3%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
 
-                ul {
-                    margin: 30px 0;
+                .word {
+                    margin-top: 5%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
                     align-items: center;
 
-                    li {
-                        font-size: 4.5rem;
-                        margin: 0 20px;
+                    ul {
+                        margin: 30px 0;
+                        align-items: center;
 
-                        &.kor {
-                            font-size: 4rem;
+                        li {
+                            font-size: 3.1rem;
+                            margin: 0 20px;
                         }
                     }
-                }
 
+                }
             }
+
         }
     }
 }
