--- a/src/css/pages/about.css
+++ b/src/css/pages/about.css
@@ -104,67 +104,6 @@
     font-size: 2rem;
     margin: 0 30px;
   }
-  #about .inner figure {
-    width: 100%;
-    height: 600px;
-    gap: 10%;
-    margin-top: 50px;
-    align-items: center;
-    justify-content: center;
-  }
-  #about .inner figure > .pc {
-    display: block;
-    height: 90%;
-    border-radius: 25px;
-  }
-  #about .inner figure > .mobile {
-    display: none;
-  }
-  #about .inner figure figcaption p {
-    font-size: 1.5rem;
-    margin: 20px 0;
-  }
-  #about .inner figure figcaption p span {
-    margin-right: 30px;
-  }
-  #about .inner figure figcaption p span:nth-child(1) {
-    font-weight: bold;
-  }
-  #about .inner figure figcaption .skill p {
-    font-weight: bold;
-  }
-  #about .inner figure figcaption .skill ul {
-    gap: 20px;
-    flex-wrap: wrap;
-  }
-  #about .inner figure figcaption .skill ul li {
-    width: 50px;
-  }
-  #about .inner figure figcaption .skill ul li img {
-    width: 100%;
-    transition: 0.35s;
-  }
-  #about .inner figure figcaption .skill ul li:hover img {
-    transform: rotate(5deg) scale(1.2);
-  }
-  #about .inner .word {
-    margin-top: 3%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  #about .inner .word ul {
-    flex-wrap: wrap;
-    align-items: center;
-  }
-  #about .inner .word ul li {
-    font-size: 3.5rem;
-    margin: 20px 10px;
-  }
-  #about .inner .word ul li.kor {
-    font-size: 2.5rem;
-  }
 }
 @media (min-width: 1100px) {
   #about .about-banner {
@@ -177,63 +116,96 @@
     font-size: 2.5rem;
     white-space: nowrap;
   }
-  #about .inner figure {
-    width: 100%;
-    height: 600px;
-    gap: 10%;
-    margin-top: 50px;
-    align-items: center;
-    justify-content: center;
+  #about .inner {
+    position: relative;
+    margin-top: 4%;
+    height: 180vh;
+    justify-content: space-between;
+    padding: 0 30px;
+    gap: 0px;
   }
-  #about .inner figure > .pc {
-    display: block;
-    height: 100%;
-    border-radius: 25px;
+  #about .inner .me {
+    width: 40%;
+    height: 100vh;
+    position: sticky;
+    top: 0%;
   }
-  #about .inner figure > .mobile {
+  #about .inner .me > div {
+    position: absolute;
+    width: 70%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  #about .inner .me .pc {
+    width: 99%;
+    margin: 3px;
+    border-radius: 20px;
+    border: 3px solid transparent;
+    background-image: linear-gradient(#000, #000), linear-gradient(300deg, #e657af, #0049ff, #43cf2e);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+  }
+  #about .inner .me .mobile {
     display: none;
   }
-  #about .inner figure figcaption p {
+  #about .inner .sticky {
+    position: relative;
+    top: 10%;
+    width: 60%;
+    border: 1px solid #000;
+  }
+  #about .inner .sticky .desc h2 {
+    font-size: 3.5rem;
+    line-height: 5rem;
+    font-weight: 600;
+  }
+  #about .inner .sticky .desc p {
+    margin-top: 30px;
+    line-height: 2rem;
+    font-size: 19px;
+  }
+  #about .inner .sticky .name {
+    margin-top: 8%;
+  }
+  #about .inner .sticky .name p {
     margin: 20px 0;
   }
-  #about .inner figure figcaption p span {
+  #about .inner .sticky .name p span {
     margin-right: 30px;
   }
-  #about .inner figure figcaption p span:nth-child(1) {
+  #about .inner .sticky .name p span:nth-child(1) {
     font-weight: normal;
   }
-  #about .inner figure figcaption .skill p {
+  #about .inner .sticky .name .skill p {
     font-weight: normal;
   }
-  #about .inner figure figcaption .skill ul {
+  #about .inner .sticky .name .skill ul {
     gap: 20px;
   }
-  #about .inner figure figcaption .skill ul li {
+  #about .inner .sticky .name .skill ul li {
     width: 50px;
   }
-  #about .inner figure figcaption .skill ul li img {
+  #about .inner .sticky .name .skill ul li img {
     width: 100%;
     transition: 0.35s;
   }
-  #about .inner figure figcaption .skill ul li:hover img {
+  #about .inner .sticky .name .skill ul li:hover img {
     transform: rotate(5deg) scale(1.2);
   }
-  #about .inner .word {
-    margin: 3%;
+  #about .inner .sticky .word {
+    margin-top: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  #about .inner .word ul {
+  #about .inner .sticky .word ul {
     margin: 30px 0;
     align-items: center;
   }
-  #about .inner .word ul li {
-    font-size: 4.5rem;
+  #about .inner .sticky .word ul li {
+    font-size: 3.1rem;
     margin: 0 20px;
-  }
-  #about .inner .word ul li.kor {
-    font-size: 4rem;
   }
 }
