--- a/src/css/pages/scss/project.scss
+++ b/src/css/pages/scss/project.scss
@@ -17,9 +17,11 @@
 
                 .mn {
                     font-family: var(--font-family-Eng);
-                    cursor: pointer; 
                     span{
                         padding: 0 10px;
+                    }
+                   .cursor-box{
+                        border: 1px solid #828282;
                     }
                 }
 
@@ -31,6 +33,7 @@
                     a {
                         display: block;
                         padding: 0 10px;
+                        cursor: none;
                     }
                 }
             }
@@ -255,7 +258,6 @@
                                 position: absolute;
                                 right: 5%;
                                 bottom: 5%;
-                                cursor: pointer;
                                 z-index: 9;
 
                                 p {
@@ -438,7 +440,6 @@
                                 position: absolute;
                                 left: 400px;
                                 top: 330px;
-                                cursor: pointer;
                                 z-index: 9;
 
                                 p {
@@ -629,7 +630,6 @@
                                 position: absolute;
                                 left: 400px;
                                 top: 350px;
-                                cursor: pointer;
                                 z-index: 9;
 
                                 p {
