--- a/style.css
+++ b/style.css
@@ -14,12 +14,43 @@
 @import url(./src/css/pages/contact.css);
 @import url(./src/css/pages/footer.css);
 
+body {
+    cursor: none;
+}
 
 
-.flex{
+.flex {
     display: flex;
 }
-/* section{
-height: 100vh;
-border: 1px solid #cecece;
+
+.cursor {
+    pointer-events: none;
+    position: fixed;
+    padding: 0.3rem;
+    background-color: #fff;
+    border-radius: 50%;
+    mix-blend-mode: difference;
+    transition: transform 0.3s ease;
+    z-index: 999;
+    /* backdrop-filter: blur(.5px); */
+}
+
+.cursor::after {
+    content: 'View';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    color: #fff;
+}
+
+.link {
+    position: relative;
+    z-index: 99;
+}
+
+/* 
+.link:hover .cursor {
+    transform: translate(-50%, -50%) scale(8);
+    background-color: var( --mainColor100-color);
 } */
