--- a/src/css/pages/about.css
+++ b/src/css/pages/about.css
@@ -100,9 +100,102 @@
   #about .about-banner {
     height: 80px;
   }
-  #about .about-banner span {
+  #about .about-banner .splide__slide {
     font-size: 2rem;
     margin: 0 30px;
+    white-space: nowrap;
+  }
+  #about .inner {
+    position: relative;
+    margin-top: 4%;
+    height: 180vh;
+    justify-content: space-between;
+    padding: 0 30px;
+    gap: 0px;
+  }
+  #about .inner .me {
+    width: 40%;
+    height: 100vh;
+    position: sticky;
+    top: 0%;
+  }
+  #about .inner .me > div {
+    position: absolute;
+    width: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  #about .inner .me .pc {
+    width: 99%;
+    margin: 3px;
+    border-radius: 20px;
+    border: 3px solid transparent;
+    background-image: linear-gradient(#000, #000), linear-gradient(300deg, #e657af, #0049ff, #43cf2e);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+  }
+  #about .inner .me .mobile {
+    display: none;
+  }
+  #about .inner .sticky {
+    position: relative;
+    top: 10%;
+    width: 60%;
+    border: 1px solid #000;
+  }
+  #about .inner .sticky .desc h2 {
+    font-size: 2.6rem;
+    line-height: 4rem;
+    font-weight: 600;
+  }
+  #about .inner .sticky .desc p {
+    margin-top: 30px;
+    line-height: 2rem;
+    font-size: 16px;
+  }
+  #about .inner .sticky .name {
+    margin-top: 8%;
+  }
+  #about .inner .sticky .name p {
+    margin: 20px 0;
+  }
+  #about .inner .sticky .name p span {
+    margin-right: 30px;
+  }
+  #about .inner .sticky .name p span:nth-child(1) {
+    font-weight: normal;
+  }
+  #about .inner .sticky .name .skill p {
+    font-weight: normal;
+  }
+  #about .inner .sticky .name .skill ul {
+    gap: 20px;
+  }
+  #about .inner .sticky .name .skill ul li {
+    width: 40px;
+  }
+  #about .inner .sticky .name .skill ul li img {
+    width: 100%;
+    transition: 0.35s;
+  }
+  #about .inner .sticky .name .skill ul li:hover img {
+    transform: rotate(5deg) scale(1.2);
+  }
+  #about .inner .sticky .word {
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #about .inner .sticky .word ul {
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  #about .inner .sticky .word ul li {
+    font-size: 2rem;
+    margin: 20px 20px;
   }
 }
 @media (min-width: 1100px) {
@@ -119,7 +212,7 @@
   #about .inner {
     position: relative;
     margin-top: 4%;
-    height: 180vh;
+    height: 200vh;
     justify-content: space-between;
     padding: 0 30px;
     gap: 0px;
@@ -194,18 +287,17 @@
     transform: rotate(5deg) scale(1.2);
   }
   #about .inner .sticky .word {
-    margin-top: 5%;
+    margin-top: 10%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
   #about .inner .sticky .word ul {
-    margin: 30px 0;
     align-items: center;
   }
   #about .inner .sticky .word ul li {
     font-size: 3.1rem;
-    margin: 0 20px;
+    margin: 30px 20px;
   }
 }
