--- a/src/css/pages/scss/about.scss
+++ b/src/css/pages/scss/about.scss
@@ -135,106 +135,131 @@
         .about-banner {
             height: 80px;
 
-            span {
+            .splide__slide {
                 font-size: 2rem;
                 margin: 0 30px;
+                white-space: nowrap;
             }
         }
 
-        // .inner {
-        //     position: relative;
-        //     height: 200vh;
-        //     .me {
-        //         width: 100%;
-        //         height: 600px;
-        //         display: flex;
-        //         position: sticky;
-        //         margin-top: 50px;
-        //         align-items: center;
-        //         justify-content: center;
+        .inner {
+            position: relative;
+            margin-top: 4%;
+            height: 180vh;
+            justify-content: space-between;
+            padding: 0 30px;
+            gap: 0px;
 
-        //         >.pc {
-        //             display: block;
-        //             height: 90%;
-        //             border-radius: 25px;
-        //         }
+            .me {
+                width: 40%;
+                height: 100vh;
+                position: sticky;
+                top: 0%;
+                >div {
+                    position: absolute;
+                    width: 90%;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
 
-        //         >.mobile {
-        //             display: none;
-        //         }
+                .pc {
+                    width: 99%;
+                    margin: 3px;
+                    border-radius: 20px;
+                    border: 3px solid transparent;
+                    background-image: linear-gradient(#000, #000), linear-gradient(300deg, #e657af, #0049ff, #43cf2e);
+                    background-origin: border-box;
+                    background-clip: content-box, border-box;
+                }
 
-        //     }
+                .mobile {
+                    display: none;
+                }
 
-        //     .sticky {
-        //         p {
-        //             font-size: 1.5rem;
-        //             margin: 20px 0;
+            }
 
-        //             span {
-        //                 margin-right: 30px;
+            .sticky {
+                position: relative;
+                top: 10%;
+                width: 60%;
+                border: 1px solid #000;
 
-        //                 // &.kor {
-        //                 //     font-size: 1rem;
-        //                 // }
+                .desc {
+                    h2 {
+                        font-size: 2.6rem;
+                        line-height: 4rem;
+                        font-weight: 600;
+                    }
 
-        //                 &:nth-child(1) {
-        //                     font-weight: bold;
-        //                 }
-        //             }
-        //         }
+                    p {
+                        margin-top: 30px;
+                        line-height: 2rem;
+                        font-size: 16px;
+                    }
+                }
 
-        //         .skill {
-        //             p {
-        //                 font-weight: bold;
-        //             }
+                .name {
+                    margin-top: 8%;
 
-        //             ul {
-        //                 gap: 20px;
-        //                 flex-wrap: wrap;
+                    p {
+                        margin: 20px 0;
 
-        //                 li {
-        //                     width: 50px;
+                        span {
+                            margin-right: 30px;
 
-        //                     img {
-        //                         width: 100%;
-        //                         transition: .35s;
-        //                     }
+                            &:nth-child(1) {
+                                font-weight: normal;
+                            }
+                        }
+                    }
 
-        //                     &:hover img {
-        //                         transform: rotate(5deg) scale(1.2);
-        //                     }
-        //                 }
-        //             }
-        //         }
+                    .skill {
+                        p {
+                            font-weight: normal;
+                        }
 
-        //         .word {
-        //             margin-top: 3%;
-        //             display: flex;
-        //             flex-direction: column;
-        //             justify-content: center;
-        //             align-items: center;
+                        ul {
+                            gap: 20px;
 
+                            li {
+                                width: 40px;
 
-        //             ul {
+                                img {
+                                    width: 100%;
+                                    transition: .35s;
+                                }
 
-        //                 flex-wrap: wrap;
-        //                 align-items: center;
-
-        //                 li {
-        //                     font-size: 3.5rem;
-        //                     margin: 20px 10px;
-
-        //                     &.kor {
-        //                         font-size: 2.5rem;
-        //                     }
-        //                 }
-        //             }
-
-        //         }
-        //     }
+                                &:hover img {
+                                    transform: rotate(5deg) scale(1.2);
+                                }
+                            }
+                        }
+                    }
+                }
 
 
-        // }
+                .word {
+                    margin-top: 5%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+
+                    ul {
+                        align-items: center;
+                        flex-wrap: wrap;
+
+                        li {
+                            font-size: 2rem;
+                            margin: 20px 20px;
+                        }
+                    }
+
+                }
+            }
+
+        }
     }
 }
 
@@ -256,7 +281,7 @@
         .inner {
             position: relative;
             margin-top: 4%;
-            height: 180vh;
+            height: 200vh;
             justify-content: space-between;
             padding: 0 30px;
             gap: 0px;
@@ -358,19 +383,19 @@
 
 
                 .word {
-                    margin-top: 5%;
+                    margin-top: 10%;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
 
                     ul {
-                        margin: 30px 0;
+
                         align-items: center;
 
                         li {
                             font-size: 3.1rem;
-                            margin: 0 20px;
+                            margin: 30px 20px;
                         }
                     }
 
