--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -1,6 +1,13 @@
 #work {
     background-color: var(--black);
     width: 100%;
+    height: 100%;
+
+    .link {
+        color: #fff;
+        text-align: center;
+        font-size: 20rem;
+    }
 
     .banner {
         background-image: linear-gradient(to right, #33b1ff, #5ba4ff, #8992ff, #b57bf5, #db5ddb, #f644b2, #ff3487, #ff385b, #ff6a1e, #f5a100, #c0d300, #48ff00);
@@ -24,17 +31,19 @@
         }
 
     }
-    .work-desc{
-        .desc-index{
-            li{
-                .summary{
+
+    .work-desc {
+        .desc-index {
+            li {
+                .summary {
                     font-family: 'Pretendard-Regular';
                 }
             }
         }
     }
 
-    .work-title,.desc-index {
+    .work-title,
+    .desc-index {
         font-family: var(--font-family-Eng);
     }
 
@@ -96,7 +105,7 @@
 
                 .work-title {
                     color: var(--mainColor100-color);
-                    font-size: 5rem;
+                    font-size: 4rem;
                     font-weight: 300;
                     position: absolute;
                     text-align: center;
@@ -118,7 +127,9 @@
                         align-items: center;
                         background-color: var(--black);
                         opacity: 0;
-
+                        border: 1px solid #c0a1a1;
+                        display: flex;
+                        justify-content: center;
 
                         &.on {
                             opacity: 1;
@@ -132,11 +143,12 @@
 
                         a {
                             display: block;
-                            color: #fff;
+                            text-align: center;
+
 
                             p {
                                 color: var(--mainColor100-color);
-                                font-size: 7rem;
+                                font-size: 4rem;
                                 font-weight: 300;
                             }
 
@@ -152,7 +164,13 @@
 
             .work-list {
                 gap: 10px;
-                flex-wrap: wrap;
+                width: 100%;
+                flex-direction: column;
+                border: 1px solid #fb2020;
+
+                >div {
+                    flex-direction: column;
+                }
 
                 li {
                     border: 1px solid #ffffff;
@@ -215,8 +233,11 @@
 
         .inner {
             width: 100%;
+            height: 600px;
             margin-top: 5%;
             overflow-x: hidden;
+            border: 1px solid #ffffff;
+
             .inner-box {
                 position: relative;
                 display: flex;
@@ -243,7 +264,7 @@
                     position: absolute;
                     top: 50%;
                     left: 50%;
-                    transform: translate(-50%,-50%);
+                    transform: translate(-50%, -50%);
                     text-align: center;
                     white-space: nowrap;
                 }
@@ -254,13 +275,11 @@
                     position: relative;
                     z-index: 999;
 
-
-
                     li {
                         position: absolute;
                         top: 50%;
                         left: 50%;
-                        transform: translate(-50%,-50%);
+                        transform: translate(-50%, -50%);
                         width: 100%;
                         height: 100%;
                         display: flex;
@@ -268,13 +287,14 @@
                         background-color: var(--black);
                         opacity: 0;
                         text-align: center;
-                        a{
+
+                        a {
                             display: block;
                             text-align: center;
                             position: absolute;
                             top: 50%;
                             left: 50%;
-                            transform: translate(-50%,-50%);
+                            transform: translate(-50%, -50%);
                             width: 100%;
                         }
 
@@ -282,11 +302,13 @@
                         &.on {
                             opacity: 1;
                         }
-                        &.on p{
-                           transform: translateY(0);
+
+                        &.on p {
+                            transform: translateY(0);
                         }
-                        &.on b{
-                           transform: translateY(0);
+
+                        &.on b {
+                            transform: translateY(0);
                         }
 
                         a {
@@ -297,7 +319,7 @@
                                 color: var(--mainColor100-color);
                                 font-size: 7rem;
                                 font-weight: 300;
-                                transform: translateY(100px);
+                                transform: translateY(50px);
                                 transition: .35s;
                             }
 
@@ -305,7 +327,7 @@
                                 font-size: 1.5rem;
                                 display: block;
                                 padding: 0 5px;
-                                transform: translateY(100px);
+                                transform: translateY(50px);
                                 transition: .45s;
                             }
                         }
@@ -321,9 +343,24 @@
                     transform: translateX(5%);
 
                     li {
-                        border: 1px solid #ffffff;
+                        border: 1px solid var(--mainColor300-color);
                         border-radius: 25px;
                         width: 500px;
+                        height: 400px;
+                        position: relative;
+
+                        &::before {
+                            content: '';
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            background-position: center center;
+                            background-size: cover;
+                            background-repeat: no-repeat;
+                            filter: brightness(0.1);
+                        }
 
 
                         a {
@@ -385,6 +422,7 @@
 
         .inner {
             width: 100%;
+            height: 500px;
             margin-top: 5%;
             overflow-x: hidden;
 
@@ -414,7 +452,7 @@
                     position: absolute;
                     top: 50%;
                     left: 50%;
-                    transform: translate(-50%,-50%);
+                    transform: translate(-50%, -50%);
 
                     span {
                         display: block;
@@ -431,7 +469,7 @@
                         position: absolute;
                         top: 50%;
                         left: 50%;
-                        transform: translate(-50%,-50%);
+                        transform: translate(-50%, -50%);
                         width: 100%;
                         height: 100%;
                         display: flex;
@@ -472,15 +510,32 @@
             }
 
             .work-list {
+                border: 1px solid #ff0000;
+                align-items: center;
 
                 >div {
                     gap: 30px;
                     transform: translateX(12%);
 
                     li {
-                        border: 1px solid #ffffff;
                         border-radius: 25px;
                         width: 500px;
+                        height: 400px;
+                        border: 1px solid var(--mainColor300-color);
+                        position: relative;
+
+                        &::before {
+                            content: '';
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            background-position: center center;
+                            background-size: cover;
+                            background-repeat: no-repeat;
+                            filter: brightness(0.1);
+                        }
 
                         a {
                             display: block;
