--- a/src/css/pages/work.css
+++ b/src/css/pages/work.css
@@ -1,6 +1,12 @@
 #work {
   background-color: var(--black);
   width: 100%;
+  height: 100%;
+}
+#work .link {
+  color: #fff;
+  text-align: center;
+  font-size: 20rem;
 }
 #work .banner {
   background-image: linear-gradient(to right, #33b1ff, #5ba4ff, #8992ff, #b57bf5, #db5ddb, #f644b2, #ff3487, #ff385b, #ff6a1e, #f5a100, #c0d300, #48ff00);
@@ -21,7 +27,8 @@
 #work .work-desc .desc-index li .summary {
   font-family: "Pretendard-Regular";
 }
-#work .work-title, #work .desc-index {
+#work .work-title,
+#work .desc-index {
   font-family: var(--font-family-Eng);
 }
 #work .work-list {
@@ -73,7 +80,7 @@
   }
   #work .inner .work-desc .work-title {
     color: var(--mainColor100-color);
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 300;
     position: absolute;
     text-align: center;
@@ -94,6 +101,9 @@
     align-items: center;
     background-color: var(--black);
     opacity: 0;
+    border: 1px solid #c0a1a1;
+    display: flex;
+    justify-content: center;
   }
   #work .inner .work-desc .desc-index li.on {
     opacity: 1;
@@ -103,11 +113,11 @@
   }
   #work .inner .work-desc .desc-index li a {
     display: block;
-    color: #fff;
+    text-align: center;
   }
   #work .inner .work-desc .desc-index li a p {
     color: var(--mainColor100-color);
-    font-size: 7rem;
+    font-size: 4rem;
     font-weight: 300;
   }
   #work .inner .work-desc .desc-index li a b {
@@ -117,7 +127,12 @@
   }
   #work .inner .work-list {
     gap: 10px;
-    flex-wrap: wrap;
+    width: 100%;
+    flex-direction: column;
+    border: 1px solid #fb2020;
+  }
+  #work .inner .work-list > div {
+    flex-direction: column;
   }
   #work .inner .work-list li {
     border: 1px solid #ffffff;
@@ -166,8 +181,10 @@
   }
   #work .inner {
     width: 100%;
+    height: 600px;
     margin-top: 5%;
     overflow-x: hidden;
+    border: 1px solid #ffffff;
   }
   #work .inner .inner-box {
     position: relative;
@@ -243,14 +260,14 @@
     color: var(--mainColor100-color);
     font-size: 7rem;
     font-weight: 300;
-    transform: translateY(100px);
+    transform: translateY(50px);
     transition: 0.35s;
   }
   #work .inner .work-desc .desc-index li a b {
     font-size: 1.5rem;
     display: block;
     padding: 0 5px;
-    transform: translateY(100px);
+    transform: translateY(50px);
     transition: 0.45s;
   }
   #work .inner .work-list {
@@ -261,9 +278,23 @@
     transform: translateX(5%);
   }
   #work .inner .work-list > div li {
-    border: 1px solid #ffffff;
+    border: 1px solid var(--mainColor300-color);
     border-radius: 25px;
     width: 500px;
+    height: 400px;
+    position: relative;
+  }
+  #work .inner .work-list > div li::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: brightness(0.1);
   }
   #work .inner .work-list > div li a {
     display: block;
@@ -308,6 +339,7 @@
   }
   #work .inner {
     width: 100%;
+    height: 500px;
     margin-top: 5%;
     overflow-x: hidden;
   }
@@ -379,14 +411,32 @@
     margin-bottom: 10px;
     font-size: 1.7rem;
   }
+  #work .inner .work-list {
+    border: 1px solid #ff0000;
+    align-items: center;
+  }
   #work .inner .work-list > div {
     gap: 30px;
     transform: translateX(12%);
   }
   #work .inner .work-list > div li {
-    border: 1px solid #ffffff;
     border-radius: 25px;
     width: 500px;
+    height: 400px;
+    border: 1px solid var(--mainColor300-color);
+    position: relative;
+  }
+  #work .inner .work-list > div li::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: brightness(0.1);
   }
   #work .inner .work-list > div li a {
     display: block;
